# flaskapp

webapp/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt
webapp/webapp/: app.py  explore.py  explore_play.ipynb  loader.py  model.py  utilities.py  vectorize.py
webapp/webapp/qnd/: jax_stuff.py  vae.py
