[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["midhuniitm <midhungecster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
flask = "^2.3.2"
flask-markdown = "^0.3"
pipreqs = "^0.4.13"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
