[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["midhuniitm <midhungecster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
gunicorn = "^20.1.0"
flask = "^2.3.2"
flask-markdown = "^0.3"
pipreqs = "^0.4.13"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
stockfish = "^3.28.0"
chess = "^1.9.4"
ipykernel = "^6.23.2"
jax = "^0.4.14"
torch = ">=2.0.0, !=2.0.1"
ipython = "^8.14.0"
jaxlib = "^0.4.14"
optax = "^0.1.7"
flax = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
